--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -33,8 +33,31 @@
   "Total Purchase": "মোট ক্রয়",
   "Total Sale": "মোট বিক্রয়",
   "Total Product": "মোট পণ্য",
-  "Total Customer": "মোট গ্রাহক",
+  "Total Customer": "মোট কাস্টমার",
   "Top Brand": "শীর্ষ ব্র্যান্ড",
-  "Top Products (Quantity)": "সেরা পণ্য (পরিমাণ)"
+  "Top Products (Quantity)": "সেরা পণ্য (পরিমাণ)",
+  "Sl": "ক্রম",
+  "Descroption": "বিবরণ",
+  "Unit Price": "একক মূল্য",
+  "Price": "একক মূল্য",
+  "Qty(Pcs)": "পরিমাণ(পিস)",
+  "Qty": "পরিমাণ",
+  "Sub Total": "সাব টোটাল",
+  "Action": "অ্যাকশন",
+  "Product": "পণ্য",
+  "Quantity(Pcs)": "পরিমাণ(পিস)",
+  "Free(Qty)": "ফ্রি(পরিমাণ)",
+  "CPU": "সিপিইউ",
+  "Profit": "লাভ",
+  "Amount": "মোট মূল্য",
+  "Total Amount": "মোট মূল্য",
+  "Total": "মোট",
+  "Discount": "ডিসকাউন্ট",
+  "Total Discount": "মোট ডিসকাউন্ট",
+  "Net Profit": "নেট লাভ",
+  "Net Amount": "মোট মূল্য",
+  "Amount In Word": "মোট মূল্য(কথায়)",
+  "Customer": "কাস্টমার",
+  "Mobile": "মোবাইল"
 
 }
