--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -9,22 +9,22 @@
     "SALE": "বিক্রয়",
     "NEW_SALE": "নতুন বিক্রয়",
     "SALE_LIST": "বিক্রয় তালিকা",
-    "SALE_DAYS_REPORT": "বিক্রয় দিনের প্রতিবেদন",
-    "SUPPLIER_REPORT": "সরবরাহকারী প্রতিবেদন",
+    "SALE_DAYS_REPORT": "বিক্রয় দৈনিক রিপোর্ট ",
+    "SUPPLIER_REPORT": "সাপ্লাইয়ার রিপোর্ট ",
     "SALE_DUE": "বাকি বিক্রয়",
     "STOCK": "স্টক",
     "INVENTORY": "ইনভেন্টরি",
-    "REPORT": "প্রতিবেদন",
-    "SALE_REPORT": "বিক্রয় প্রতিবেদন",
-    "SALE_DUE_REPORT": "বাকি বিক্রয় প্রতিবেদন",
-    "SALE_RETURN_REPORT": "বিক্রয় ফেরত প্রতিবেদন",
-    "PURCHASE_REPORT": "ক্রয় প্রতিবেদন",
-    "PURCHASE_DUE_REPORT": "বাকি ক্রয় প্রতিবেদন",
+    "REPORT": "রিপোর্ট ",
+    "SALE_REPORT": "বিক্রয় রিপোর্ট ",
+    "SALE_DUE_REPORT": "বাকি বিক্রয় রিপোর্ট ",
+    "SALE_RETURN_REPORT": "বিক্রয় ফেরত রিপোর্ট ",
+    "PURCHASE_REPORT": "ক্রয় রিপোর্ট ",
+    "PURCHASE_DUE_REPORT": "বাকি ক্রয় রিপোর্ট ",
     "USER": "ব্যবহারকারী",
     "SETTINGS": "সেটিংস",
     "PRODUCTS": "পণ্য",
-    "BRANDS_TYPES": "ব্র্যান্ড ও ধরন",
-    "SUPPLIERS": "সরবরাহকারী",
+    "BRANDS_TYPES": "ব্র্যান্ড ও টাইপ",
+    "SUPPLIERS": "সাপ্লাইয়ার",
     "SUBSCRIPTION": "সাবস্ক্রিপশন",
     "HOTKEY": "হট-কী"
   },
