--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -58,6 +58,7 @@
   "Net Amount": "মোট মূল্য",
   "Amount In Word": "মোট মূল্য(কথায়)",
   "Customer": "কাস্টমার",
-  "Mobile": "মোবাইল"
+  "Mobile": "মোবাইল",
+  "Invoice": "ইনভয়েস"
 
 }
