--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -31,13 +31,15 @@
   "ATTENTION": "মনোযোগ",
   "ATTENTION_TEXT": "আপনার সাবস্ক্রিপশনের মেয়াদ শেষ! অনুগ্রহ করে আপনার সাবস্ক্রিপশন প্ল্যান আপডেট করুন।",
   "Total Purchase": "মোট ক্রয়",
+  "Purchase": "ক্রয়",
   "Total Sale": "মোট বিক্রয়",
   "Total Product": "মোট পণ্য",
   "Total Customer": "মোট কাস্টমার",
   "Top Brand": "শীর্ষ ব্র্যান্ড",
   "Top Products (Quantity)": "সেরা পণ্য (পরিমাণ)",
   "Sl": "ক্রম",
-  "Descroption": "বিবরণ",
+  "Description": "বিবরণ",
+  "Item Description": "পণ্য বিবরণ",
   "Unit Price": "একক মূল্য",
   "Price": "একক মূল্য",
   "Qty(Pcs)": "পরিমাণ(পিস)",
@@ -47,7 +49,7 @@
   "Product": "পণ্য",
   "Quantity(Pcs)": "পরিমাণ(পিস)",
   "Free(Qty)": "ফ্রি(পরিমাণ)",
-  "CPU": "সিপিইউ",
+  "CPU": "সি.পি.ইউ",
   "Profit": "লাভ",
   "Amount": "মোট মূল্য",
   "Total Amount": "মোট মূল্য",
@@ -55,10 +57,98 @@
   "Discount": "ডিসকাউন্ট",
   "Total Discount": "মোট ডিসকাউন্ট",
   "Net Profit": "নেট লাভ",
-  "Net Amount": "মোট মূল্য",
+  "Net Amount": "প্রদেয় মূল্য",
   "Amount In Word": "মোট মূল্য(কথায়)",
   "Customer": "কাস্টমার",
   "Mobile": "মোবাইল",
-  "Invoice": "ইনভয়েস"
+  "Invoice": "ইনভয়েস",
+  "Saving": "সেভিং",
+  "Save": "সেভ",
+  "View Purchase List": "ক্রয় তালিকা",
+  "Product Name": "পণ্যের নাম",
+  "RPU": "আর.পি.ইউ",
+  "Percentage": "পার্সেন্টেজ",
+  "QTY": "পরিমাণ",
+  "Add": "সংকলন",
+  "Reset": "রিসেট",
+  "Barcode": "বারকোড",
+  "Account Summary": "হিসাব বিবরণী",
+  "Total VAT": "মোট ভ্যাট",
+  "Fixed": "ফিক্সড",
+  "Advance": "অ্যাডভান্স",
+  "Due": "বকেয়া",
+  "Supplier": "সাপ্লাইয়ার",
+  "Select Supplier": "সাপ্লাইয়ার নির্বাচন",
+  "Close": "বন্ধ",
+  "Purchase List": "ক্রয় তালিকা",
+  "Back to Purchase": "ক্রয় লিস্টে ফিরুন",
+  "Supplier Invoice": "সাপ্লাইয়ার ইনভয়েস",
+  "Purchase Date": "ক্রয় তারিখ",
+  "Net Payable": "প্রদেয় মূল্য",
+  "Receivable": "প্রাপ্য",
+  "Purchase Return": "ক্রয় ফেরৎ",
+  "Date": "তারিখ",
+  "Update": "আপডেট",
+  "Item": "আইটেম",
+  "Quantity": "পরিমাণ",
+  "Total Due Amount": "মোট বাকি টাকা",
+  "Customer Name": "গ্রাহকের নাম",
+  "Customer Mobile": "গ্রাহকের মোবাইল",
+  "Empty data": "কোনো তথ্য নেই",
+  "Sold by": "বিক্রেতা",
+  "Address": "ঠিকানা",
+  "Free": "ফ্রি",
+  "Net": "নেট",
+  "Sold items will be returned within 7 days with invoice": "চালানসহ ৭ দিনের মধ্যে বিক্রীত পণ্য ফেরতযোগ্য",
+  "Thank you for your order": "আপনার অর্ডারের জন্য ধন্যবাদ",
+  "Phone": "ফোন",
+  "Sales Return": "বিক্রয় ফেরত",
+  "No Item Found": "কোনো আইটেম পাওয়া যায়নি",
+  "For Order": "অর্ডারের জন্য",
+  "For Service": "সেবার জন্য",
+  "Invoice by": "ইনভয়েস প্রস্তুতকারী",
+  "INVOICE": "ইনভয়েস",
+  "Bill": "বিল",
+  "Subtotal": "সাবটোটাল",
+  "Print": "প্রিন্ট",
+  "Sale": "বিক্রয়",
+  "Inventory List": "ইনভেন্টরি তালিকা",
+  "Filter": "ফিল্টার",
+  "Total CPU": "মোট সি.পি.ইউ",
+  "Total RPU": "মোট আর.পি.ইউ",
+  "Total Profit": "মোট লাভ",
+  "Low Stock Alert Qty": "স্টক এলার্ট",
+  "Low Stock QTY": "স্টক এলার্ট",
+  "Stock Report": "স্টক রিপোর্ট",
+  "Download Excel": "এক্সেল ডাউনলোড",
+  "Download PDF": "পিডিএফ ডাউনলোড",
+  "Total Qty": "মোট পরিমাণ",
+  "Stock Qty": "মোট স্টক",
+  "Qty In": "ক্রয় পরিমাণ",
+  "Qty Out": "বিক্রয় পরিমাণ",
+  "Sale Report": "বিক্রয় রিপোর্ট",
+  "Type": "ধরন",
+  "From": "শুরু",
+  "To": "শেষ",
+  "Payment Type": "পেমেন্ট ধরন",
+  "Sales Person": "বিক্রয়কর্মী",
+  "Start Date": "শুরুর তারিখ",
+  "End Date": "শেষের তারিখ",
+  "Total Sale Amount": "মোট বিক্রয় মূল্য",
+  "Total Quantity": "মোট পরিমাণ",
+  "Total Grand Amount": "মোট গ্র্যান্ড টোটাল",
+  "Total Due": "মোট বাকি",
+  "Sales Invoice": "বিক্রয় চালান",
+  "Sales Date": "বিক্রয়ের তারিখ",
+  "Grand Total": "গ্র্যান্ড টোটাল",
+  "Payment": "পেমেন্ট",
+  "Salesman": "বিক্রয়কর্মী",
+  "No Data Found! Please Select Search Parameter": "কোনো তথ্য পাওয়া যায়নি! অনুগ্রহ করে সার্চ প্যারামিটার নির্বাচন করুন",
+  "Sale Items": "আইটেম সমূহ",
+  "Purchase Invoice": "ক্রয় চালান",
+  "Supplier Details": "সাপ্লাইয়ার ডিটেলস",
+  "Purchase By": "ক্রয়কারী",
+  "Total Advance": "মোট অগ্রিম",
+  "Purchase Report": "ক্রয় রিপোর্ট"
 
 }
