--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -49,7 +49,7 @@
   "Product": "পণ্য",
   "Quantity(Pcs)": "পরিমাণ(পিস)",
   "Free(Qty)": "ফ্রি(পরিমাণ)",
-  "CPU": "সি.পি.ইউ",
+  "CPU": "ক্রয় মূল্য",
   "Profit": "লাভ",
   "Amount": "মোট মূল্য",
   "Total Amount": "মোট মূল্য",
@@ -66,8 +66,8 @@
   "Save": "সেভ",
   "View Purchase List": "ক্রয় তালিকা",
   "Product Name": "পণ্যের নাম",
-  "RPU": "আর.পি.ইউ",
-  "Percentage": "পার্সেন্টেজ",
+  "RPU": "বিক্রয় মূল্য",
+  "Percentage": "শতকরা",
   "QTY": "পরিমাণ",
   "Add": "সংকলন",
   "Reset": "রিসেট",
@@ -114,8 +114,8 @@
   "Sale": "বিক্রয়",
   "Inventory List": "ইনভেন্টরি তালিকা",
   "Filter": "ফিল্টার",
-  "Total CPU": "মোট সি.পি.ইউ",
-  "Total RPU": "মোট আর.পি.ইউ",
+  "Total CPU": "মোট ক্রয় মূল্য",
+  "Total RPU": "মোট বিক্রয় মূল্য",
   "Total Profit": "মোট লাভ",
   "Low Stock Alert Qty": "স্টক এলার্ট",
   "Low Stock QTY": "স্টক এলার্ট",
@@ -149,6 +149,27 @@
   "Supplier Details": "সাপ্লাইয়ার ডিটেলস",
   "Purchase By": "ক্রয়কারী",
   "Total Advance": "মোট অগ্রিম",
-  "Purchase Report": "ক্রয় রিপোর্ট"
+  "Purchase Report": "ক্রয় রিপোর্ট",
+  "In Stock": "স্টকে আছে",
+  "Name": "নাম",
+  "Net Total": "মোট মূল্য",
+  "Change": "চেঞ্জ",
+  "Confirm": "কন্ফার্ম",
+  "Processing": "প্রসেসিং",
+  "New Supplier": "নতুন সাপ্লাইয়ার",
+  "Contact Person": "যোগাযোগ",
+  "Email": "ইমেইল",
+  "Status": "অবস্থা",
+  "Supplier Edit": "সাপ্লাইয়ার আপডেট",
+  "ACTIVE": "সক্রিয়",
+  "INACTIVE": "নিষ্ক্রিয়",
+  "Supplier Info": "সাপ্লাইয়ার",
+  "Supplier name is required": "সাপ্লাইয়ার নাম আবশ্যক",
+  "Discount Amount": "মোট ডিসকাউন্ট",
+  "Due Amount": "বকেয়া পরিমাণ",
+  "Payout Amount": "পরিশোধের পরিমাণ",
+  "Search": "অনুসন্ধান",
+  "Date Range": "তারিখ",
+  "Pcs": "পিস"
 
 }
