--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -26,7 +26,8 @@
     "BRANDS_TYPES": "ব্র্যান্ড ও টাইপ",
     "SUPPLIERS": "সাপ্লাইয়ার",
     "SUBSCRIPTION": "সাবস্ক্রিপশন",
-    "HOTKEY": "হট-কী"
+    "HOTKEY": "হট-কী",
+    "DAMAGE": "ড্যামেজ"
   },
   "ATTENTION": "মনোযোগ",
   "ATTENTION_TEXT": "আপনার সাবস্ক্রিপশনের মেয়াদ শেষ! অনুগ্রহ করে আপনার সাবস্ক্রিপশন প্ল্যান আপডেট করুন।",
@@ -183,6 +184,8 @@
   "Purchase Due Report": "ক্রয়ের বকেয়া রিপোর্ট",
   "Payment Status": "পেমেন্ট স্ট্যাটাস",
   "Select Date": "তারিখ নির্বাচন",
-  "Created by": "তৈরি করেছেন"
+  "Created by": "তৈরি করেছেন",
+  "Damage": "ড্যামেজ",
+  "View Damage List": "ড্যামেজ তালিকা"
 
 }
