--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -186,6 +186,7 @@
   "Select Date": "তারিখ নির্বাচন",
   "Created by": "তৈরি করেছেন",
   "Damage": "ড্যামেজ",
-  "View Damage List": "ড্যামেজ তালিকা"
+  "View Damage List": "ড্যামেজ তালিকা",
+  "Batch No": "ব্যাচ নং"
 
 }
