--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -12,6 +12,7 @@
     "SALE_DAYS_REPORT": "বিক্রয় দৈনিক রিপোর্ট ",
     "SUPPLIER_REPORT": "সাপ্লাইয়ার রিপোর্ট ",
     "SALE_DUE": "বাকি বিক্রয়",
+    "SALE_EMI": "ইএমআই বিক্রয়",
     "STOCK": "স্টক",
     "INVENTORY": "ইনভেন্টরি",
     "REPORT": "রিপোর্ট ",
