--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,7 @@
     "SALE_DAYS_REPORT": "Sale Days Report",
     "SUPPLIER_REPORT": "Supplier Report",
     "SALE_DUE": "Sale Due",
+    "SALE_EMI": "Sale EMI",
     "STOCK": "Stock",
     "INVENTORY": "Inventory",
     "REPORT": "Report",
