Add customer document upload UI

--- a/src/assets/i18n/bn.json
+++ b/src/assets/i18n/bn.json
@@ -101,6 +101,12 @@
   "Customer Info": "কাস্টমার তথ্য",
   "Customer Edit": "কাস্টমার সম্পাদনা",
   "Customer name is required": "কাস্টমারের নাম আবশ্যক",
+  "Upload Customer Documents": "কাস্টমার ডকুমেন্ট আপলোড",
+  "Document Type": "ডকুমেন্টের ধরন",
+  "Select Files": "ফাইল নির্বাচন করুন",
+  "Upload": "আপলোড",
+  "No documents found": "কোনো ডকুমেন্ট পাওয়া যায়নি",
+  "File Name": "ফাইলের নাম",
   "Empty data": "কোনো তথ্য নেই",
   "Sold by": "বিক্রেতা",
   "Address": "ঠিকানা",
